--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "ngx-mask": "^13.1.15",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
     "rxjs": "~7.4.0",
@@ -53,12 +54,12 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "jasmine-core": "~3.10.0",
     "jest": "^27.4.7",
     "jest-preset-angular": "^11.1.0",
     "prettier": "^2.8.8",
-    "typescript": "~4.5.2",
-    "husky": "^8.0.0"
+    "typescript": "~4.5.2"
   },
   "jest": {
     "preset": "jest-preset-angular",
