--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "ngx-mask": "^13.1.15",
+    "primeflex": "^3.3.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
     "rxjs": "~7.4.0",
