--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.7.11",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
